--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ali Soveizi"
-  avatar           : "profile.jpg"
+  avatar           : "profile.jpeg"
   bio              : "M.Sc. Student in C.E Amirkabir University of Technology"
   location         : "Tehran-Iran"
   employer         :
