--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        : "aboutelamiro"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :"alisuvizi@aut.ac.ir"
+  linkedin         :
   orcid            : 
   pinterest        :
   soundcloud       :
